<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>cn.taketoday</groupId>
  <artifactId>today-framework-parent</artifactId>
  <packaging>pom</packaging>

  <!--
  latest  4.0.0-Beta.1 -Alpha.1 -Draft.1 -SNAPSHOT
 -->
  <version>4.0.0-Draft.1</version>
  <name>today-framework-parent</name>

  <modules>
    <module>today-framework</module>
    <module>today-aspects</module>
    <module>today-indexer</module>
    <module>today-mybatis</module>
    <module>today-instrument</module>
    <module>today-test</module>
    <module>integration-tests</module>
    <module>today-retry</module>
    <module>today-test-support</module>
    <module>today-framework-bom</module>
  </modules>

  <description>
    A Java library for dependency injection and aspect oriented programing and building high-performance web applications like Spring Boot.
  </description>

  <inceptionYear>2017</inceptionYear>

  <properties>
    <!--    <skipTests>true</skipTests>-->
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!--server-->
    <netty.version>4.1.71.Final</netty.version>
    <jetty.version>11.0.7</jetty.version>
    <undertow.version>2.2.13.Final</undertow.version>
    <embed.tomcat.version>10.0.12</embed.tomcat.version>
    <servlet.version>5.0.0</servlet.version>

    <!--codec-->
    <fastjson.version>1.2.78</fastjson.version>
    <jackson.version>2.13.0</jackson.version>

    <commons-dbutils.version>1.7</commons-dbutils.version>
    <embedded-db-junit.version>1.0.0</embedded-db-junit.version>
    <guava.version>30.1-jre</guava.version>
    <h2.version>1.4.199</h2.version>
    <hsqldb.version>2.2.8</hsqldb.version>
    <jdbi.version>2.78</jdbi.version>
    <joda-time.version>2.0</joda-time.version>
    <jooq.version>3.3.0</jooq.version>
    <junit5.version>5.8.2</junit5.version>
    <mockito.version>4.0.0</mockito.version>
    <persistence-api.version>1.0.2</persistence-api.version>
    <slf4j.version>1.7.25</slf4j.version>
    <spring-jdbc.version>5.2.3.RELEASE</spring-jdbc.version>
    <reactor.version>3.4.16</reactor.version>
    <aspectj.version>1.9.9</aspectj.version>
    <httpcomponents-core5.version>5.1.2</httpcomponents-core5.version>

    <!--doc-->
    <site.output.dir>${project.build.directory}/staging</site.output.dir>
    <maven.site.skip>true</maven.site.skip>
    <asciidoctorj.version>2.5.2</asciidoctorj.version>
    <asciidoctorj.pdf.version>1.6.0</asciidoctorj.pdf.version>
    <jruby.version>9.2.19.0</jruby.version>
    <!-- status: DRAFT, BETA, etc., or blank for final -->
    <status>DRAFT</status>
    <revisiondate>${maven.build.timestamp}</revisiondate>

  </properties>

  <licenses>
    <license>
      <name>GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007</name>
      <url>https://www.gnu.org/licenses/gpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>


  <url>https://github.com/TAKETODAY/today-framework</url>
  <organization>
    <name>TODAY</name>
    <url>https://taketoday.cn</url>
  </organization>

  <developers>
    <developer>
      <name>TODAY</name>
      <url>https://taketoday.cn</url>
      <email>taketoday@foxmail.com</email>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/TAKETODAY/today-framework.git</url>
    <developerConnection>TODAY</developerConnection>
    <tag>dependency-injection, aspect-oriented-programing, web-framework</tag>
  </scm>

  <issueManagement>
    <system>Github Issues</system>
    <url>https://github.com/TAKETODAY/today-framework/issues</url>
  </issueManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cn.taketoday</groupId>
        <artifactId>today-framework-bom</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <snapshotRepository>
      <id>snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </snapshotRepository>
    <repository>
      <id>release</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <build>
    <defaultGoal>compile</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <release>${java.version}</release>
          <compilerVersion>${java.version}</compilerVersion>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.1</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Extension-Name>today.framework</Extension-Name>
              <Implementation-Version>${project.version}</Implementation-Version>
              <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
              <Implementation-Vendor-Id>cn.taketoday</Implementation-Vendor-Id>
              <Export-Package>cn.taketoday.*</Export-Package>
              <Automatic-Module-Name>today.framework</Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <quiet>true</quiet>
          <source>${java.version}</source>
          <release>${java.version}</release>
          <charset>UTF-8</charset>
          <encoding>UTF-8</encoding>
          <docencoding>UTF-8</docencoding>
          <failOnError>false</failOnError>
          <failOnWarnings>false</failOnWarnings>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <argLine>
            -DtestGroups=all --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens
            java.base/java.lang.reflect=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>docs</id>

      <build>
        <plugins>

          <plugin>
            <groupId>org.asciidoctor</groupId>
            <artifactId>asciidoctor-maven-plugin</artifactId>
            <version>2.2.1</version>
            <dependencies>
              <dependency>
                <groupId>org.jruby</groupId>
                <artifactId>jruby-complete</artifactId>
                <version>${jruby.version}</version>
              </dependency>
              <dependency>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctorj</artifactId>
                <version>${asciidoctorj.version}</version>
              </dependency>
              <dependency>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctorj-pdf</artifactId>
                <version>${asciidoctorj.pdf.version}</version>
              </dependency>
            </dependencies>
            <executions>

              <execution>
                <id>asciidoc-to-html</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>process-asciidoc</goal>
                </goals>
                <configuration>
                  <backend>html5</backend>
                  <sourceDirectory>${basedir}/docs</sourceDirectory>
                  <outputFile>${project.build.directory}/generated-docs/today-framework-${project.version}.html
                  </outputFile>
                  <attributes>
                    <source-highlighter>coderay</source-highlighter>
                    <imagesdir>images</imagesdir>
                    <doctype>book</doctype>
                    <status>${status}</status>
                    <data-uri />
                    <icons>font</icons>
                    <toc>left</toc>
                    <icons>font</icons>
                    <sectanchors>true</sectanchors>
                    <idprefix />
                    <idseparator>-</idseparator>
                    <docinfo1>true</docinfo1>
                  </attributes>
                </configuration>
              </execution>

              <execution>
                <id>asciidoc-to-pdf</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>process-asciidoc</goal>
                </goals>
                <configuration>
                  <backend>pdf</backend>
                  <sourceDirectory>${basedir}/docs</sourceDirectory>
                  <outputFile>${project.build.directory}/generated-docs/today-framework-${project.version}.pdf
                  </outputFile>
                  <attributes>
                    <source-highlighter>coderay</source-highlighter>
                    <imagesdir>images</imagesdir>
                    <pdf-stylesdir>${project.basedir}/docs/theme</pdf-stylesdir>
                    <pdf-style>today</pdf-style>
                    <doctype>book</doctype>
                    <status>${status}</status>
                    <data-uri />
                    <icons>font</icons>
                    <pagenums />
                    <toc />
                    <icons>font</icons>
                    <sectanchors>true</sectanchors>
                    <idprefix />
                    <idseparator>-</idseparator>
                    <docinfo1>true</docinfo1>
                    <embedAssets>true</embedAssets>
                  </attributes>
                </configuration>
              </execution>
            </executions>

            <configuration>
              <sourceDocumentName>index.adoc</sourceDocumentName>
              <attributes>
                <revnumber>${project.version}</revnumber>
                <revremark>${status}</revremark>
                <revdate>${revisiondate}</revdate>
              </attributes>
            </configuration>
          </plugin>

        </plugins>
      </build>
    </profile>

    <profile>
      <id>coverage</id>
      <build>
        <plugins>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.2</version>
            <configuration>
              <argLine>
                ${argLine} -Dcoverage=true -DtestGroups=all --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
                java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
              </argLine>
            </configuration>
          </plugin>

          <plugin>
            <groupId>org.eluder.coveralls</groupId>
            <artifactId>coveralls-maven-plugin</artifactId>
            <version>4.3.0</version>
            <dependencies>
              <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>2.3.3</version>
              </dependency>
            </dependencies>
            <configuration>
              <jacocoReports>${basedir}/target/coverage-reports/jacoco.xml</jacocoReports>
            </configuration>
          </plugin>

          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.8.7</version>
            <configuration>
              <excludes>
                <exclude>or.aopalliance.*</exclude>
                <exclude>cn.taketoday.logging.*</exclude>
              </excludes>
              <outputDirectory>${basedir}/target/coverage-reports</outputDirectory>
              <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
              <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
              <formats>XML</formats>
            </configuration>

            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>

              <execution>
                <id>jacoco-report</id>
                <phase>test</phase>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>

            </executions>

          </plugin>
        </plugins>
      </build>


    </profile>

    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.8</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>sonatype-nexus</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>

</project>
